loopdowhile.Poucet2.scala.code
while (sortieTrouv?e==false) {
  
do {
  
var nbBaggles:Int = 0;  // ATTENTION: le mettre apr?s le do et non pas avant !!!!
  
avance();

if (estSurBiscuit==true) {
      nbBaggles=nbBaggles+1;
    }
    
    
  } while(crossing==false)

if (nbBaggles >= 3) {
  gauche(); }
else {
  droite();
}
  
} 

  
avance();